Closed Bug 1261405 Opened 8 years ago Closed 8 years ago

PushPermissionDescriptor in Permissions.webidl is wrong ('userVisible' should be 'userVisibleOnly')

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: marco, Assigned: lina)

References

Details

(Keywords: dev-doc-needed, site-compat, Whiteboard: btpp-active)

Attachments

(1 file)

From https://w3c.github.io/permissions/#push, it should be:
dictionary PushPermissionDescriptor : PermissionDescriptor {
  boolean userVisibleOnly = false;
};

In http://mxr.mozilla.org/mozilla-central/source/dom/webidl/Permissions.webidl, it is:
dictionary PushPermissionDescriptor : PermissionDescriptor {
  boolean userVisible = false;
};
Kit, can you look at this? Thanks.
Blocks: 1105827
Flags: needinfo?(kcambridge)
Looks like it was renamed in https://github.com/w3c/push-api/pull/138. We just didn't update it because we use a quota system instead of `userVisible{Only}`. Seems like a small change; I'll just take care of it now.
Assignee: nobody → kcambridge
Status: NEW → ASSIGNED
Flags: needinfo?(kcambridge)
Attachment #8739196 - Flags: review?(amarchesini)
Attachment #8739196 - Flags: review?(amarchesini) → review+
Whiteboard: btpp-active
https://hg.mozilla.org/mozilla-central/rev/3b5dbf1464c4
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
https://simple-push-demo.appspot.com/ is now failing because it was using `userVisibleOnly` and we're now throwing a NS_ERROR_NOT_IMPLEMENTED exception (see bug 1250902).
Blocks: 1266821
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: