Bug 1261405 - Rename `PushPermissionDescriptor.userVisible` to `userVisibleOnly`. r=baku

MozReview-Commit-ID: AORVoEAR4uN